force-app/main/default/objects/Apttus_Config2__FormulaField__c/Apttus_Config2__FormulaField__c.object-meta.xml
<CustomObject>
    <description>Represents a formula field used in price dimensions and rules</description>
    <label>Formula Field (CPQ)</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formula Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>