force-app/main/default/objects/Apttus_Config2__FormulaField__c/fields/Apttus_Config2__BusinessObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BusinessObject__c</fullName>
    <description>The business object which provides the context for the field</description>
    <label>Business Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apttus_Config2__LineItem__c</fullName>
                <default>true</default>
                <label>Apttus_Config2__LineItem__c</label>
            </value>
            <value>
                <fullName>Apttus_Config2__OrderLineItem__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__ProductConfiguration__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>