force-app/main/default/objects/Apttus_Config2__FormulaField__c/fields/Apttus_Config2__Expression__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Expression__c</fullName>
    <description>The formula expression. Either use field or expression.</description>
    <inlineHelpText>The formula expression. Either use field or expression.</inlineHelpText>
    <label>Expression</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>