force-app/main/default/objects/Apttus_Config2__FormulaField__c/fields/Apttus_Config2__Formula__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Formula__c</fullName>
    <description>The field formula</description>
    <label>Field</label>
    <type>TextArea</type>
</CustomField>