force-app/main/default/objects/Apttus_Config2__FormulaField__c/fields/Apttus_Config2__UseType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UseType__c</fullName>
    <description>The formula use type</description>
    <inlineHelpText>The formula use type</inlineHelpText>
    <label>Use Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reference</fullName>
                <default>true</default>
                <label>Reference</label>
            </value>
            <value>
                <fullName>Expression</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>