force-app/main/default/objects/Apttus_Config2__FormulaField__c/listViews/Apttus_Config2__All1.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>